--- a/static/index.html
+++ b/static/index.html
@@ -185,6 +185,9 @@
             <button id="open-campaign-selector" class="btn-success">
                 📧 Publish Campaign
             </button>
+            <button id="open-reminder-modal" class="btn-success">
+                🔔 Send Reminder
+            </button>
         </div>
 
         <!-- Two Column Layout -->
@@ -430,6 +433,67 @@
                 <div class="mt-6 flex justify-end">
                     <button id="close-result-btn" class="px-6 py-2 bg-gray-200 rounded-lg text-gray-700 hover:bg-gray-300 transition-all duration-200">
                         Close
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Reminder Modal -->
+    <div id="reminder-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+        <div class="glass-card rounded-2xl shadow-2xl max-w-4xl w-full mx-4 max-h-[90vh] overflow-y-auto">
+            <div class="p-8">
+                <div class="flex justify-between items-center mb-6">
+                    <h3 class="text-2xl font-bold bg-gradient-to-r from-purple-600 to-pink-600 bg-clip-text text-transparent">Send Reminder</h3>
+                    <button id="close-reminder-modal" class="text-gray-500 hover:text-gray-700 transition-colors">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+                        </svg>
+                    </button>
+                </div>
+
+                <div class="mb-6 p-4 bg-yellow-50 border border-yellow-200 rounded-lg">
+                    <p class="text-sm font-semibold text-yellow-800">📧 Test Mode: All emails will be sent to teguh.hardiansah@proton.me</p>
+                </div>
+
+                <div class="mb-6">
+                    <label class="block text-sm font-semibold mb-2 text-gray-700">Active Contracts Without Signatures</label>
+                    <div class="mb-3 p-3 bg-white rounded-lg border-2 border-purple-200">
+                        <label class="flex items-center cursor-pointer">
+                            <input type="checkbox" id="select-all-reminder" class="w-5 h-5 text-purple-600 rounded border-gray-300 focus:ring-purple-500">
+                            <span class="ml-3 font-bold text-gray-900">Select All (<span id="reminder-count">0</span> contracts)</span>
+                        </label>
+                    </div>
+                    <div id="reminder-contract-list" class="space-y-2 max-h-64 overflow-y-auto">
+                        <!-- Contracts will be loaded here -->
+                    </div>
+                </div>
+
+                <div class="mb-6">
+                    <label class="block text-sm font-semibold mb-2 text-gray-700">📝 Message Preview</label>
+                    <div class="bg-gray-50 p-4 rounded-lg border border-gray-200">
+                        <p class="text-sm text-gray-700 whitespace-pre-line">Kami mengingatkan bahwa proses penandatanganan kontrak kerja waktu tertentu (PKWT) dijadwalkan untuk dilakukan hari ini 7 Oktober 2025, melalui platform digital.
+
+Mohon agar Saudara/i segera mengakses lampiran PKWT berikut untuk melakukan penandatanganan.
+
+Batas waktu penandatanganan adalah hari ini pukul 20:00.
+
+Terima kasih atas perhatian dan kerja samanya.
+
+Salam hangat,
+Tajunissa Legisa W
+General Manager
+PT JMAX Indonesia
+📧 Lisa@jmaxindo.com</p>
+                    </div>
+                </div>
+
+                <div class="flex justify-end space-x-4">
+                    <button id="cancel-reminder" class="px-6 py-2 border border-gray-300 rounded-lg text-gray-700 hover:bg-gray-50 transition-all duration-200">
+                        Cancel
+                    </button>
+                    <button id="send-reminder-btn" class="btn-success">
+                        📧 Send Reminder to Selected
                     </button>
                 </div>
             </div>
