add activation email

--- a/static/index.html
+++ b/static/index.html
@@ -188,6 +188,9 @@
             <button id="open-reminder-modal" class="btn-success">
                 🔔 Send Reminder
             </button>
+            <button id="send-confirmation-btn" class="btn-success">
+                ✅ Send Confirmation
+            </button>
         </div>
 
         <!-- Two Column Layout -->
