update email preview

--- a/static/index.html
+++ b/static/index.html
@@ -472,12 +472,10 @@
                 <div class="mb-6">
                     <label class="block text-sm font-semibold mb-2 text-gray-700">📝 Message Preview</label>
                     <div class="bg-gray-50 p-4 rounded-lg border border-gray-200">
-                        <p class="text-sm text-gray-700 whitespace-pre-line">Kami mengingatkan bahwa proses penandatanganan kontrak kerja waktu tertentu (PKWT) dijadwalkan untuk dilakukan hari ini 7 Oktober 2025, melalui platform digital.
+                        <p class="text-sm text-gray-700 whitespace-pre-line">Kami mengingatkan bahwa proses penandatanganan kontrak kerja waktu tertentu (PKWT) dapat diakses melalui platform digital.
 
-Mohon agar Saudara/i segera mengakses lampiran PKWT berikut untuk melakukan penandatanganan.
+Kami telah melakukan aktivasi untuk seluruh akun. Segera akses laman berikut dan login untuk melakukan penandatanganan kontrak.
 https://pkwt.jmaxindo.id
-
-Batas waktu penandatanganan adalah hari ini pukul 20:00.
 
 Terima kasih atas perhatian dan kerja samanya.
 
