fix md5 in link

--- a/static/index.html
+++ b/static/index.html
@@ -474,8 +474,8 @@
                     <div class="bg-gray-50 p-4 rounded-lg border border-gray-200">
                         <p class="text-sm text-gray-700 whitespace-pre-line">Kami mengingatkan bahwa proses penandatanganan kontrak kerja waktu tertentu (PKWT) dapat diakses melalui platform digital.
 
-Kami telah melakukan aktivasi untuk seluruh akun. Segera akses laman berikut dan login untuk melakukan penandatanganan kontrak.
-https://pkwt.jmaxindo.id
+Segera akses laman berikut untuk melakukan penandatanganan kontrak.
+https://wa.me/6281220008729?text=ttd_{contract_num_detail_md5}
 
 Terima kasih atas perhatian dan kerja samanya.
 
@@ -483,7 +483,9 @@ Salam hangat,
 Tajunissa Legisa W
 General Manager
 PT JMAX Indonesia
-📧 Lisa@jmaxindo.com</p>
+📧 Lisa@jmaxindo.com
+
+Note: {contract_num_detail_md5} akan diganti dengan kode unik untuk setiap kontrak.</p>
                     </div>
                 </div>
 
